# tokenmaxxing

./: .gitignore  LICENSE  README.md
ampere-kde/: Cargo.toml  README.md
ampere-kde/resources/: style.css
ampere-kde/src/: config.rs  gauge.rs  main.rs  sharecard.rs  theme.rs  tray.rs  ui.rs  worker.rs
ampere-kde/src/providers/: anthropic.rs  mod.rs  opencode.rs
docs/: data-sources.md  model.md
prism-macos/: Makefile  Package.swift  README.md
prism-macos/Resources/: Info.plist
prism-macos/Sources/Prism/: AppModel.swift  Creds.swift  Main.swift  Model.swift  PrismApp.swift  ShareCard.swift  Theme.swift
prism-macos/Sources/Prism/Providers/: Anthropic.swift  OpenCode.swift
prism-macos/Sources/Prism/Views/: ContentView.swift  ProviderCard.swift
tokenmaxxing-kde/: Cargo.toml  README.md
tokenmaxxing-kde/resources/: install.sh  tokenmaxxing.desktop
tokenmaxxing-kde/src/: charts.rs  config.rs  creds.rs  format.rs  gauge.rs  icon.rs  main.rs  model.rs  pricing.rs  render.rs  sharecard.rs  theme.rs  tray.rs  ui.rs  worker.rs
tokenmaxxing-kde/src/providers/: anthropic.rs  claude_history.rs  grok.rs  grok_history.rs  mod.rs  opencode.rs  opencode_remote.rs
tokenmaxxing-macos/: Makefile  Package.swift  README.md
tokenmaxxing-macos/Resources/: Info.plist  makeicon.sh
tokenmaxxing-macos/Sources/Tokenmaxxing/: AppModel.swift  Creds.swift  Format.swift  Main.swift  Model.swift  Pricing.swift  ShareCard.swift  Store.swift  Theme.swift  TokenmaxxingApp.swift  Version.swift
tokenmaxxing-macos/Sources/Tokenmaxxing/Providers/: Anthropic.swift  Grok.swift  (+4 more)
(+6 files in other folders)
