[package]
name = "tokenmaxxing"
version = "0.1.0"
edition = "2021"
description = "Electric LLM-quota meter for the KDE Plasma system tray"
license = "GPL-3.0-or-later"
repository = "https://github.com/guitaripod/tokenmaxxing"
default-run = "tokenmaxxing"

[dependencies]
adw = { version = "0.9.2", package = "libadwaita", features = ["v1_5"] }
async-channel = "2.5.0"
cairo-rs = { version = "0.22.0", features = ["png"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_12"] }
ksni = { version = "0.3.5", features = ["blocking"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
